--- a/vars/maw_prod.yml
+++ b/vars/maw_prod.yml
@@ -34,6 +34,8 @@ maw_prod_gdrive_creds_bu__use_existing_backups: false
 maw_prod_google_creds_bu__use_existing_backups: false
 maw__do_uploads_backup: true
 maw__do_dataprotection_backup: true
+maw__do_letsencrypt_backup: true
+maw__do_maw_certs_backup: true
 
 # maw host
 maw_host__allow_low_ports: true
