--- a/roles/maw/tasks/main.yml
+++ b/roles/maw/tasks/main.yml
@@ -1,8 +1,18 @@
 ---
-- name: Prepare self signed / internal certs
-  ansible.builtin.include_role:
-    name: maw_certs
+# - name: Prepare self signed / internal certs
+#   ansible.builtin.include_role:
+#     name: maw_certs
 
-# - name: Include maw_pod
+- name: Initialize maw_pod
+  ansible.builtin.include_role:
+    name: maw_pod
+  vars:
+    maw_pod__mode: setup
+
+
+
+# - name: Finalize maw_pod as a systemd service
 #   ansible.builtin.include_role:
 #     name: maw_pod
+#   vars:
+#     maw_pod__mode: systemd
