--- a/roles/maw_pod/tasks/systemd.yml
+++ b/roles/maw_pod/tasks/systemd.yml
@@ -1,36 +1,4 @@
 ---
-# stop pod via systemd, otherwise systemd and podman fight
-- name: Disable maw via systemd
-  ansible.builtin.systemd:
-    name: "pod-{{ maw__podman_pod }}"
-    enabled: false
-    state: stopped
-    scope: user
-  ignore_errors: true  # nothing to stop if it doesn't exist
-  tags: skip_ansible_lint
-
-- name: get pod info
-  containers.podman.podman_pod_info:
-    name: "{{ maw__podman_pod }}"
-  register: podinfo
-
-- name: stop pod if running
-  containers.podman.podman_pod:
-    name: "{{ maw__podman_pod }}"
-    state: stopped
-  when: (podinfo.pods | length > 0) and (podinfo.pods[0].State == 'Running')
-
-- name: "create {{ maw__podman_pod }} pod"
-  containers.podman.podman_pod:
-    name: "{{ maw__podman_pod }}"
-    state: started
-    publish: "{{ maw__podman_publish_ports if maw__podman_publish_ports is iterable else [] }}"
-
-- name: set the dir / volume variables
-  ansible.builtin.set_fact:
-    cert_vol: "{{ maw_cert_volume.volume is defined | ternary(maw_cert_volume.volume.Name, maw__certs_dir) }}"
-    google_creds_vol: "{{ google_creds_volume.volume.Name }}"
-
 - name: Ensure user systemd directory exists
   ansible.builtin.file:
     path: "{{ maw__systemd_dir }}"
@@ -72,7 +40,7 @@
 - name: Start and/or Enable maw via systemd
   ansible.builtin.systemd:
     daemon_reload: true
-    name: "pod-{{ maw__podman_pod }}"
+    name: "{{ maw__podman_systemd_pod_service }}"
     enabled: "{{ maw__env == 'prod' }}"
     state: started
     scope: user
