--- a/vars/maw_vars.yml
+++ b/vars/maw_vars.yml
@@ -138,8 +138,8 @@ maw_postgres__version: 14
 maw_postgres__pod: "{{ maw__podman_pod }}"
 maw_postgres__image: "docker.io/postgres:{{ maw_postgres__version }}-alpine"
 maw_postgres__container: "{{ maw__env }}-maw-postgres"
-maw_postgres__volume: "{{ maw__env }}-maw-postgres-{{ maw__version_postgres }}"
-maw_postgres__init_volume: "{{ maw__env }}-maw-postgres-{{ maw__version_postgres }}-init"
+maw_postgres__volume: "{{ maw__env }}-maw-postgres-{{ maw_postgres__version }}"
+maw_postgres__init_volume: "{{ maw__env }}-maw-postgres-{{ maw_postgres__version }}-init"
 maw_postgres__backup_volume: "{{ maw__env }}-maw-postgres-backup"
 maw_postgres__envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
 maw_postgres__password: "{{ vault_password_sql_postgres }}"
