--- a/roles/maw_postgres/meta/argument_specs.yml
+++ b/roles/maw_postgres/meta/argument_specs.yml
@@ -1,7 +1,7 @@
 ---
 argument_specs:
   main:
-    short_description: Creates redis server and supporting objects for mikeandwan.us
+    short_description: Creates postgres server and supporting objects for mikeandwan.us
     options:
       maw_postgres__version:
         type: int
