--- a/roles/maw_postgres/tasks/gdrive_volume.yml
+++ b/roles/maw_postgres/tasks/gdrive_volume.yml
@@ -3,46 +3,13 @@
   containers.podman.podman_volume:
     name: "{{ maw_postgres__gdrive_creds_volume }}"
     state: present
+  register: _maw_postgres__gdrive_creds_volume_result
 
-- name: migrate maw-gdrive-creds
+- name: restore maw-gdrive-creds
   ansible.builtin.include_role:
-    name: podman_copy
-  when: gdrive_creds_volume.changed
+    name: podman_restore_volume
+  when: maw_postgres__configure_archive_jobs and _maw_postgres__gdrive_creds_volume_result.changed
   vars:
-    pod_cp__skip_if_src_not_exists: true
-    pod_cp__src_dir_or_volume: maw-gdrive-creds
-    pod_cp__dest_dir_or_volume: "{{ gdrive_creds_volume.volume.Name }}"
-    pod_cp__result_varname: _maw_gdrive__migrated
-
-- name: copy gdrive credentials when not migrated
-  block:
-    - name: Define tmp dir variable
-      ansible.builtin.set_fact:
-        maw_gdrive__tempdir: "{{ remote_home_dir }}/_tmp_ansible_maw_gdrive"
-
-    - name: Ensure temp dir exists
-      ansible.builtin.file:
-        path: "{{ maw_gdrive__tempdir }}"
-        state: directory
-        mode: u+rw
-
-    - name: copy files to temp dir
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ maw_gdrive__tempdir }}"
-        mode: u+rw
-      with_fileglob: "{{ maw__gdrive_creds_dir }}/*"
-
-    - name: copy google drive credentials to volume
-      ansible.builtin.include_role:
-        name: podman_copy
-      vars:
-        pod_cp__src_dir_or_volume: "{{ maw_gdrive__tempdir }}"
-        pod_cp__dest_dir_or_volume: "{{ gdrive_creds_volume.volume.Name }}"
-
-    - name: Cleanup temp dir
-      ansible.builtin.file:
-        path: "{{ maw_gdrive__tempdir }}"
-        state: absent
-
-  when: gdrive_creds_volume.changed and (_maw_gdrive__migrated is defined) and (not _maw_gdrive__migrated)
+    pod_vol_re__temp_remote_dir: "{{ maw_postgres__tempdir }}"
+    pod_vol_re__control_dir: "{{ maw_prod_gdrive_creds_bu__control_dir }}"
+    pod_vol_re__volume: "{{ maw_postgres__gdrive_creds_volume }}"
