--- a/roles/maw_google_credentials/tasks/main.yml
+++ b/roles/maw_google_credentials/tasks/main.yml
@@ -1,50 +1,10 @@
 ---
-- name: create maw-google-creds volume
-  containers.podman.podman_volume:
-    name: "{{ maw_google_creds__volume }}"
-    state: present
-  register: _maw_google_creds__volume_results
+- name: prepare google credential volume
+  ansible.builtin.include_tasks:
+    file: volume.yml
+  when: maw_google_creds__use_volume
 
-- name: migrate maw-google-creds
-  ansible.builtin.include_role:
-    name: podman_copy
-  when: _maw_google_creds__volume_results.changed
-  vars:
-    pod_cp__skip_if_src_not_exists: true
-    pod_cp__src_dir_or_volume: "{{ maw_google_creds__volume_to_migrate }}"
-    pod_cp__dest_dir_or_volume: "{{ maw_google_creds__volume }}"
-    pod_cp__result_varname: _maw_google__migrated
-
-- name: copy google credentials when not migrated
-  block:
-
-    - name: Define tmp dir variable
-      ansible.builtin.set_fact:
-        _maw_google_creds__temp_dir: "{{ remote_home_dir }}/_tmp_ansible_maw_google"
-
-    - name: Ensure temp dir exists
-      ansible.builtin.file:
-        path: "{{ _maw_google_creds__temp_dir }}"
-        state: directory
-        mode: u+rw
-
-    - name: copy files to temp dir
-      ansible.builtin.copy:
-        src: "{{ item }}"
-        dest: "{{ _maw_google_creds__temp_dir }}"
-        mode: u+rw
-      with_fileglob: "{{ maw__google_email_creds_dir }}/*"
-
-    - name: copy google drive credentials to volume
-      ansible.builtin.include_role:
-        name: podman_copy
-      vars:
-        pod_cp__src_dir_or_volume: "{{ _maw_google_creds__temp_dir }}"
-        pod_cp__dest_dir_or_volume: "{{ maw_google_creds__volume }}"
-
-    - name: Cleanup temp dir
-      ansible.builtin.file:
-        path: "{{ _maw_google_creds__temp_dir }}"
-        state: absent
-
-  when: _maw_google_creds__volume_results.changed and (_maw_google__migrated is defined) and (not _maw_google__migrated)
+- name: prepare google credential directory
+  ansible.builtin.include_tasks:
+    file: directory.yml
+  when: not maw_google_creds__use_volume
