--- a/vars/maw_dev.yml
+++ b/vars/maw_dev.yml
@@ -47,7 +47,7 @@ maw_host__password: ""
 
 # maw google credentials
 maw_google_creds__use_volume: false
-maw_google_creds__restore: false
+maw_google_creds__restore: true
 
 # maw postgres
 maw_postgres__envfile_backup: false
