--- a/roles/maw_api/tasks/container_hosted.yml
+++ b/roles/maw_api/tasks/container_hosted.yml
@@ -9,17 +9,17 @@
     state: present
   register: _maw_api__dataprotection_volume_result
 
-- name: migrate api dataprotection files from original volume
+- name: restore dataprotection files
   ansible.builtin.include_role:
-    name: podman_copy
+    name: podman_restore_volume
   when: >
     _maw_api__dataprotection_volume_result.changed
     and
-    maw_api__dataprotection_volume_to_migrate | length > 0
+    maw_api__restore_dataprotection
   vars:
-    pod_cp__skip_if_src_not_exists: true
-    pod_cp__src_dir_or_volume: "{{ maw_api__dataprotection_volume_to_migrate }}"
-    pod_cp__dest_dir_or_volume: "{{ maw_api__dataprotection_volume }}"
+    pod_vol_re__temp_remote_dir: "{{ maw_api__temp_dir }}"
+    pod_vol_re__control_dir: "{{ maw_api__dataprotection_controller_backup_dir }}"
+    pod_vol_re__volume: "{{ maw_api__dataprotection_volume }}"
 
 - name: create uploads volume
   containers.podman.podman_volume:
@@ -27,14 +27,17 @@
     state: present
   register: _maw_api__uploads_volume
 
-- name: migrate maw-uploads
+- name: restore upload files
   ansible.builtin.include_role:
-    name: podman_copy
-  when: _maw_api__uploads_volume.changed
+    name: podman_restore_volume
+  when: >
+    _maw_api__uploads_volume.changed
+    and
+    maw_api__restore_uploads
   vars:
-    pod_cp__skip_if_src_not_exists: true
-    pod_cp__src_dir_or_volume: "{{ maw_api__upload_volume_to_migrate }}"
-    pod_cp__dest_dir_or_volume: "{{ maw_api__upload_volume }}"
+    pod_vol_re__temp_remote_dir: "{{ maw_api__temp_dir }}"
+    pod_vol_re__control_dir: "{{ maw_api__upload_controller_backup_dir }}"
+    pod_vol_re__volume: "{{ maw_api__upload_volume }}"
 
 - name: maw-api container
   containers.podman.podman_container:
