--- a/roles/maw_auth/meta/argument_specs.yml
+++ b/roles/maw_auth/meta/argument_specs.yml
@@ -3,6 +3,11 @@ argument_specs:
   main:
     short_description: Creates auth service and supporting objects for mikeandwan.us
     options:
+      maw_auth__run_in_container:
+        type: bool
+        required: true
+        description: Indicates if maw_auth should run in a container (we will run this manually for dev)
+
       maw_auth__pod:
         type: str
         required: true
@@ -37,11 +42,6 @@ argument_specs:
         type: str
         required: true
         description: Name of the volume where data protection files are stored
-
-      maw_auth__dataprotection_volume_to_migrate:
-        type: str
-        required: true
-        description: Name of the previous volume where data protection files are stored and should be copied to the new volume
 
       maw_auth__envfile:
         type: str
@@ -137,3 +137,18 @@ argument_specs:
         type: str
         required: true
         description: The certificate used for signing data in the app
+
+      maw_auth__restore_dataprotection:
+        type: bool
+        required: true
+        description: indicates if the dataprotection volume should be restored from backup
+
+      maw_auth__dataprotection_controller_backup_dir:
+        type: str
+        required: true
+        description: Absolute path to the directory on the controller that holds the api dataprotection backup
+
+      maw_auth__temp_dir:
+        type: str
+        required: true
+        description: Absolute path to a temp directory on the remote
