--- a/vars/maw_vars.yml
+++ b/vars/maw_vars.yml
@@ -217,25 +217,28 @@ maw_api__pod: "{{ maw__podman_pod }}"
 maw_api__container: "{{ maw__env }}-maw-api"
 maw_api__cert_dir: "{{ maw__certs_dir }}"
 maw_api__cert_volume: "{{ maw__certs_volume }}"
+maw_api__dataprotection_controller_backup_dir: "{{ maw_prod_apidp_bu__control_dir }}"
 maw_api__dataprotection_dir: "{{ remote_maw_root }}/api/dataprotection"
 maw_api__dataprotection_volume: "{{ maw__env }}-maw-api-dataprotection"
 maw_api__dataprotection_dir_for_site: "{{ maw_api__run_in_container | ternary('/dataprotection', maw_api__dataprotection_dir) }}"
 maw_api__envfile: "{{ maw__podman_env_dir }}/maw-api.env"
 maw_api__aspnet_env: "{{ maw__aspnet_env }}"
 maw_api__pfx: "{{ maw__pfx_api }}"
-maw_api__pfx_pwd: ""
 maw_api__sql_username: "{{ maw__sql_username_maw }}"
 maw_api__sql_password: "{{ maw__sql_password_maw }}"
+maw_api__upload_controller_backup_dir: "{{ maw_prod_uploads_bu__control_dir }}"
 maw_api__upload_dir: "{{ remote_maw_root }}/api/uploads"
 maw_api__upload_volume: "{{ maw__env }}-maw-upload"
 maw_api__upload_dir_for_site: "{{ maw_api__run_in_container | ternary('/maw-uploads', maw_api__upload_dir) }}"
 maw_api__asset_dir_images: "{{ maw__asset_dir_images }}"
+maw_api__temp_dir: "{{ remote_maw_root }}/_tmp_ansible_api"
 
 # maw auth
 maw_auth__pod: "{{ maw__podman_pod }}"
 maw_auth__container: "{{ maw__env }}-maw-auth"
 maw_auth__cert_dir: "{{ maw__certs_dir }}"
 maw_auth__cert_volume: "{{ maw__certs_volume }}"
+maw_auth__dataprotection_controller_backup_dir: "{{ maw_prod_authdp_bu__control_dir }}"
 maw_auth__dataprotection_dir: "{{ remote_maw_root }}/auth/dataprotection"
 maw_auth__dataprotection_volume: "{{ maw__env }}-maw-auth-dataprotection"
 maw_auth__dataprotection_dir_for_site: "{{ maw_auth__run_in_container | ternary('/dataprotection', maw_auth__dataprotection_dir) }}"
@@ -244,7 +247,6 @@ maw_auth__aspnet_env: "{{ maw__aspnet_env }}"
 maw_auth__google_creds_volume: "{{ maw_google_creds__volume }}"
 maw_auth__google_email_creds_file: "{{ maw_google_creds__file_for_site }}"
 maw_auth__pfx: "{{ maw__pfx_auth }}"
-maw_auth__pfx_pwd:
 maw_auth__sql_username: "{{ maw__sql_username_maw }}"
 maw_auth__sql_password: "{{ maw__sql_password_maw }}"
 maw_auth__www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
@@ -257,19 +259,20 @@ maw_auth__microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
 maw_auth__github_client_id: "{{ vault_github_client_id }}"
 maw_auth__github_client_secret: "{{ vault_github_client_secret }}"
 maw_auth__pfx_signing: "{{ maw__pfx_signing }}"
+maw_auth__temp_dir: "{{ remote_maw_root }}/_tmp_ansible_auth"
 
 # maw www settings
 maw_www__pod: "{{ maw__podman_pod }}"
 maw_www__container: "{{ maw__env }}-maw-www"
 maw_www__cert_dir: "{{ maw__certs_dir }}"
 maw_www__cert_volume: "{{ maw__certs_volume }}"
+maw_www__dataprotection_controller_backup_dir: "{{ maw_prod_wwwdp_bu__control_dir }}"
 maw_www__dataprotection_dir: "{{ remote_maw_root }}/www/dataprotection"
 maw_www__dataprotection_volume: "{{ maw__env }}-maw-www-dataprotection"
 maw_www__dataprotection_dir_for_site: "{{ maw_www__run_in_container | ternary('/dataprotection', maw_www__dataprotection_dir) }}"
 maw_www__envfile: "{{ maw__podman_env_dir }}/maw-www.env"
 maw_www__aspnet_env: "{{ maw__aspnet_env }}"
 maw_www__pfx: "{{ maw__pfx_www }}"
-maw_www__pfx_pwd:
 maw_www__google_creds_volume: "{{ maw_google_creds__volume }}"
 maw_www__google_email_creds_file: "{{ maw_google_creds__file_for_site }}"
 maw_www__sql_username: "{{ maw__sql_username_maw }}"
@@ -280,6 +283,7 @@ maw_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
 maw_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 maw_www__asset_dir_images: "{{ maw__asset_dir_images }}"
 maw_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
+maw_www__temp_dir: "{{ remote_maw_root }}/_tmp_ansible_www"
 
 # maw files
 maw_files__pod: "{{ maw__podman_pod }}"
